--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "backend-landing",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "dev": "vercel dev"
   },
   "keywords": [],
